--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -92,7 +92,7 @@
     }
   }
   &__details {
-    color: $color-grey-dark;
+    color: $color-grey-dark-1;
     ul {
       list-style: none;
       width: 80%;
