--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,9 @@
 @import "components/card";
 @import "components/story";
 @import "components/bg-video";
+@import "components/form";
 
 @import "layouts/header";
 @import "layouts/grid";
+@import "layouts/footer";
+@import "layouts/navigation";
