--- a/sass/layouts/_navigation.scss
+++ b/sass/layouts/_navigation.scss
@@ -1,26 +1,93 @@
 .navigation {
   &__checkbox {
+    display: none;
   }
   &__button {
+    background-color: $color-white;
+    height: 7rem;
+    width: 7rem;
+    position: fixed;
+    top: 6rem;
+    border-radius: 50%;
+    right: 6rem;
+    z-index: 1002;
+    box-shadow: $defaut-box-shadow;
+    cursor: pointer;
   }
   &__background {
     height: 6rem;
     width: 6rem;
     border-radius: 50%;
     position: fixed;
-    top: 3.5rem;
+    top: 6.5rem;
     right: 6.5rem;
-    z-index: 1555111115;
-    background-image: radial-gradient( 
+    z-index: 1000;
+    background-image: radial-gradient(
       $color-primary-light,
       $color-primary-dark
     );
+    transition: all 0.4s cubic-bezier(0.86, 0, 0.07, 1);
+
   }
   &__nav {
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1001;
+    opacity: 0;
+    width: 0;
+    transition: all 0.4s cubic-bezier(0.86, 0, 0.07, 1);
   }
-
+  &__list {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    list-style: none;
+    text-align: center;
+    width: 100%;
+  }
   &__item {
+    margin-bottom: 1rem;
   }
   &__link {
+    &:link,
+    &:visited {
+      display: inline-block;
+      font-size: 3rem;
+      font-weight: 300;
+      color: $color-white;
+      text-transform: uppercase;
+      text-decoration: none;
+      padding: 1rem 2rem;
+      background-image: linear-gradient(
+        120deg,
+        transparent 0%,
+        transparent 50%,
+        $color-white 50%
+      );
+      background-size: 230%;
+      transition: all 0.4s;
+      span {
+        padding: 1rem;
+        display: inline-block;
+      }
+    }
+    &:hover,
+    &:active {
+      background-position: 100%;
+      color: $color-primary;
+      transform: translateX(1rem);
+    }
+  }
+
+  &__checkbox:checked ~ &__background {
+    transform: scale(80);
+  }
+  &__checkbox:checked ~ &__nav {
+    opacity: 1;
+    width: 100%;
   }
 }
