--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -20,17 +20,21 @@
     &--front {
       background-color: $color-white;
     }
+
     &--back {
       background-color: lightgreen;
       transform: rotateY(180deg);
+
       &-1 {
         background-image: $gradient-card-one;
       }
     }
   }
+
   &:hover &__side--front {
     transform: rotateY(-180deg);
   }
+
   &:hover &__side--back {
     transform: rotateY(0);
   }
@@ -47,13 +51,16 @@
     &-1 {
       background-image: $gradient-card-one, url(../../img/nat-5.jpg);
     }
+
     &-2 {
       background-image: $gradient-card-two, url(../../img/nat-6.jpg);
     }
+
     &-3 {
       background-image: $gradient-card-three, url(../../img/nat-7.jpg);
     }
   }
+
   &__heading {
     font-size: 2.5rem;
     font-weight: 300;
@@ -65,34 +72,34 @@
     text-align: right;
     width: 74%;
   }
+
   &__heading-span {
     padding: 1rem 1.5rem;
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone;
+
     &-1 {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-secondary-light, 0.85),
-        rgba($color-secondary-dark, 0.85)
-      );
+      background-image: linear-gradient(to right bottom,
+          rgba($color-secondary-light, 0.85),
+          rgba($color-secondary-dark, 0.85));
     }
+
     &-2 {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-primary-light, 0.85),
-        rgba($color-primary-dark, 0.85)
-      );
+      background-image: linear-gradient(to right bottom,
+          rgba($color-primary-light, 0.85),
+          rgba($color-primary-dark, 0.85));
     }
+
     &-3 {
-      background-image: linear-gradient(
-        to right bottom,
-        rgba($color-tertiary-light, 0.85),
-        rgba($color-tertiary-dark, 0.85)
-      );
+      background-image: linear-gradient(to right bottom,
+          rgba($color-tertiary-light, 0.85),
+          rgba($color-tertiary-dark, 0.85));
     }
   }
+
   &__details {
     color: $color-grey-dark-1;
+
     ul {
       list-style: none;
       width: 80%;
@@ -102,21 +109,20 @@
         text-align: center;
         font-size: 1.5rem;
         padding: 1rem;
+
         &:not(:last-child) {
           border-bottom: 1px solid $color-grey-light-2;
         }
       }
     }
   }
+
   // .card__side--back{
   //   position: relative;
   // }
   //FRONT SIDE STYLING
   &__cta {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include absCenter;
     width: 100%;
     text-align: center;
   }
@@ -126,10 +132,12 @@
     text-align: center;
     margin-bottom: 8rem;
   }
+
   &__price-only {
     font-size: 1.4rem;
     text-transform: uppercase;
   }
+
   &__price-value {
     font-size: 6rem;
     font-weight: 100;
