--- a/sass/layouts/_navigation.scss
+++ b/sass/layouts/_navigation.scss
@@ -2,6 +2,7 @@
   &__checkbox {
     display: none;
   }
+
   &__button {
     background-color: $color-white;
     height: 7rem;
@@ -13,7 +14,9 @@
     z-index: 1002;
     box-shadow: $defaut-box-shadow;
     cursor: pointer;
+    text-align: center;
   }
+
   &__background {
     height: 6rem;
     width: 6rem;
@@ -22,13 +25,12 @@
     top: 6.5rem;
     right: 6.5rem;
     z-index: 1000;
-    background-image: radial-gradient(
-      $color-primary-light,
-      $color-primary-dark
-    );
+    background-image: radial-gradient($color-primary-light,
+        $color-primary-dark);
     transition: all 0.4s cubic-bezier(0.86, 0, 0.07, 1);
 
   }
+
   &__nav {
     height: 100vh;
     width: 100%;
@@ -40,19 +42,20 @@
     width: 0;
     transition: all 0.4s cubic-bezier(0.86, 0, 0.07, 1);
   }
+
   &__list {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include absCenter;
     list-style: none;
     text-align: center;
     width: 100%;
   }
+
   &__item {
     margin-bottom: 1rem;
   }
+
   &__link {
+
     &:link,
     &:visited {
       display: inline-block;
@@ -62,19 +65,19 @@
       text-transform: uppercase;
       text-decoration: none;
       padding: 1rem 2rem;
-      background-image: linear-gradient(
-        120deg,
-        transparent 0%,
-        transparent 50%,
-        $color-white 50%
-      );
+      background-image: linear-gradient(120deg,
+          transparent 0%,
+          transparent 50%,
+          $color-white 50%);
       background-size: 230%;
       transition: all 0.4s;
+
       span {
         padding: 1rem;
         display: inline-block;
       }
     }
+
     &:hover,
     &:active {
       background-position: 100%;
@@ -83,11 +86,69 @@
     }
   }
 
-  &__checkbox:checked ~ &__background {
+  //FUNCTIONALITY
+  &__checkbox:checked~&__background {
     transform: scale(80);
   }
-  &__checkbox:checked ~ &__nav {
+
+  &__checkbox:checked~&__nav {
     opacity: 1;
     width: 100%;
+  }
+
+  //ICON
+  &__icon {
+    position: relative;
+    margin-top: 3.5em;
+    transition: all .4s;
+
+    &,
+    &::before,
+    &::after {
+      width: 3rem;
+      height: 2px;
+      background-color: $color-grey-dark-3;
+      display: inline-block;
+    }
+
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      transition: all .4s;
+    }
+
+    &::before {
+      top: -.8rem
+    }
+
+    &::after {
+      top: .8rem
+    }
+
+  }
+
+  &__button:hover &__icon::before {
+    top: -1rem
+  }
+
+  &__button:hover &__icon::after {
+    top: 1rem
+  }
+
+  &__checkbox:checked+&__button &__icon {
+    background-color: transparent;
+  }
+
+  &__checkbox:checked+&__button &__icon::before {
+    transform: rotate(135deg);
+    top: 0;
+  }
+
+  &__checkbox:checked+&__button &__icon::after {
+    transform: rotate(-135deg);
+    top: 0;
+
   }
 }
