--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/* 
+0-600px    : phone 
+601-900px  : tablet portrait
+901-1200px : tablet lendscape
+[1200-1800]: is where our normal styles apply
+1800px +   : big desctop
+*/
 *,
 ::before,
 ::after {
@@ -7,6 +14,15 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
