--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -20,3 +20,51 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+//mediaquery manager
+/* 
+0-600px    : phone 
+601-900px  : tablet portrait
+901-1200px : tablet lendscape
+[1200-1800]: is where our normal styles apply
+1800px +   : big desctop
+*/
+
+@mixin respond-phone {
+  @media (max-width:600px) {
+    @content
+  }
+}
+
+
+
+// $breakepoint argument choices
+//   -phone 
+//   -tab-port
+//   -tab-lend
+//   - big-desctop
+
+@mixin respond($breakepoint) {
+
+
+  @if ($breakepoint==tab-port) {
+    @media (max-width:56.25em) {
+      //900px
+      @content
+    }
+  }
+
+  @if ($breakepoint==tab-lend) {
+    @media (max-width:75em) {
+      //1200px
+      @content
+    }
+  }
+
+  @if ($breakepoint==big-desctop) {
+    @media (min-width:112.5em) {
+      //1800
+      @content
+    }
+  }
+}
