--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,9 +5,35 @@
   padding: 0;
   box-sizing: inherit;
 }
+
 html {
   //this defines what 1rem is 
   font-size: 62.5%;
+
+  // @media(max-width:600px) {
+  //   font-size: 50%;
+  // }
+
+  // @include respond-phone {
+  //   font-size: 50%;
+
+  // }
+  // @include respond(phone) {
+  //   font-size: 50%
+  // }
+  
+    @include respond(tab-lend) { //width < 1200
+      font-size: 56.25% // 1rem = 9px, 9/16 = 0.5625
+    }
+
+  @include respond(tab-port) { //width < 900
+    font-size: 50% // 1rem = 8px, 8/16 = 0.5
+  }
+
+  @include respond(big-desctop) {
+    font-size: 75% // 1rem = 12px, 12/16 = 0.75
+  }
+
 }
 
 body {
